# client

./: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  utility.cpp  utility.h
src/csync/: CMakeLists.txt  csync.cpp  csync.h  csync_private.h  csync_reconcile.cpp  csync_rename.cpp  csync_rename.h  csync_statedb.cpp  csync_update.cpp
src/csync/vio/: csync_vio_file_stat.cpp  csync_vio_local_win.cpp
src/gui/: CMakeLists.txt  application.cpp  folder.cpp  socketapi.cpp
src/gui/updater/: updater.cpp
src/libsync/: CMakeLists.txt  discoveryphase.cpp  discoveryphase.h  owncloudpropagator.cpp  owncloudtheme.cpp  propagatedownload.cpp  propagatorjobs.cpp  syncengine.cpp  syncengine.h  syncfileitem.h  syncjournaldb.cpp  theme.cpp
test/: testcsyncsqlite.cpp  testsyncengine.cpp
test/csync/: CMakeLists.txt
test/csync/csync_tests/: check_csync_statedb_query.cpp  check_csync_update.cpp
